rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__excel_typname_big_query.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"\n                SELECT\n                    typname as name,\n                    n.nspname as Schema,\n                    pg_get_userbyid(typowner) as Definer,\n                    typlen as Length,\n                    t.oid as oid,\n                    typbyval as IsReferenceType,\n                    case\n                        when typtype = 'b' then 'base'\n                        when typtype = 'd' then 'domain'\n                        when typtype = 'c' then 'composite'\n                        when typtype = 'd' then 'pseudo'\n                    end as Type,\n                    case\n                        when typalign = 'c' then 'char'\n                        when typalign = 's' then 'short'\n                        when typalign = 'i' then 'int'\n                        else 'double'\n                    end as alignment,\n                    case\n                        when typstorage = 'p' then 'plain'\n                        when typstorage = 'e' then 'secondary'\n                        when typstorage = 'm' then 'compressed inline'\n                        else 'secondary or compressed inline'\n                    end as ValueStorage,\n                    typdefault as DefaultValue,\n                    description as comment\n                FROM pg_type t\n                LEFT OUTER JOIN\n                    pg_description des ON des.objoid = t.oid,\n                    pg_namespace n\n                WHERE\n                    t.typnamespace = n.oid and\n                    t.oid::varchar like E'1033' and\n                    typname like E'%' and\n                    n.nspname like E'%' and\n                    pg_get_userbyid(typowner)::varchar like E'%' and\n                    typtype::varchar like E'c'\n                ORDER BY name\n                ;\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+------+--------+---------+--------+-----+-----------------+------+-----------+--------------+--------------+---------+
| name | Schema | Definer | Length | oid | IsReferenceType | Type | alignment | ValueStorage | DefaultValue | comment |
+------+--------+---------+--------+-----+-----------------+------+-----------+--------------+--------------+---------+
+------+--------+---------+--------+-----+-----------------+------+-----------+--------------+--------------+---------+
