rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__google_sheets_pg_database_query.snap
---
source: cubesql/src/compile/test/test_introspection.rs
assertion_line: 1901
expression: "execute_query(\"\n                SELECT\n                    cl.relname as Table,\n                    att.attname AS Name,\n                    att.attnum as Position,\n                    CASE\n                        WHEN att.attnotnull = 'f' THEN 'true'\n                        ELSE 'false'\n                    END as Nullable,\n                    CASE\n                        WHEN exists(\n                            select null\n                            from pg_constraint c\n                            where\n                                c.conrelid = cl.oid and\n                                c.contype = 'p' and\n                                att.attnum = ANY (c.conkey)\n                        ) THEN true\n                        ELSE false\n                    END as IsKey,\n                    CASE\n                        WHEN cs.relname IS NULL THEN 'false'\n                        ELSE 'true'\n                    END as IsAutoIncrement,\n                    CASE\n                        WHEN ty.typname = 'bpchar' THEN 'char'\n                        WHEN ty.typname = '_bpchar' THEN '_char'\n                        ELSE ty.typname\n                    END as TypeName,\n                    CASE\n                        WHEN\n                            ty.typname Like 'bit' OR\n                            ty.typname Like 'varbit' and\n                            att.atttypmod > 0\n                        THEN att.atttypmod\n                        WHEN\n                            ty.typname Like 'interval' OR\n                            ty.typname Like 'timestamp' OR\n                            ty.typname Like 'timestamptz' OR\n                            ty.typname Like 'time' OR\n                            ty.typname Like 'timetz' THEN -1\n                        WHEN att.atttypmod > 0 THEN att.atttypmod - 4\n                        ELSE att.atttypmod\n                    END as Length,\n                    (information_schema._pg_numeric_precision(\n                        information_schema._pg_truetypid(att.*, ty.*),\n                        information_schema._pg_truetypmod(att.*, ty.*)\n                    ))::information_schema.cardinal_number AS Precision,\n                    (information_schema._pg_numeric_scale(\n                        information_schema._pg_truetypid(att.*, ty.*),\n                        information_schema._pg_truetypmod(att.*, ty.*)\n                    ))::information_schema.cardinal_number AS Scale,\n                    (information_schema._pg_datetime_precision(\n                        information_schema._pg_truetypid(att.*, ty.*),\n                        information_schema._pg_truetypmod(att.*, ty.*)\n                    ))::information_schema.cardinal_number AS DatetimeLength\n                FROM pg_attribute att\n                JOIN pg_type ty ON ty.oid = atttypid\n                JOIN pg_namespace tn ON tn.oid = ty.typnamespace\n                JOIN pg_class cl ON\n                    cl.oid = attrelid AND\n                    (\n                        (cl.relkind = 'r') OR\n                        (cl.relkind = 's') OR\n                        (cl.relkind = 'v') OR\n                        (cl.relkind = 'm') OR\n                        (cl.relkind = 'f')\n                    )\n                JOIN pg_namespace na ON na.oid = cl.relnamespace\n                LEFT OUTER JOIN (\n                    pg_depend\n                    JOIN pg_class cs ON\n                        objid = cs.oid AND\n                        cs.relkind = 'S' AND\n                        classid = 'pg_class'::regclass::oid\n                ) ON\n                    refobjid = attrelid AND\n                    refobjsubid = attnum\n                LEFT JOIN pg_database db ON db.datname = current_database()\n                WHERE\n                    attnum > 0 AND\n                    attisdropped IS FALSE AND\n                    na.nspname = 'public' AND\n                    cl.relname = 'KibanaSampleDataEcommerce'\n                ORDER BY attnum\n                ;\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------------------------+--------------------+----------+----------+-------+-----------------+-----------+--------+-----------+-------+----------------+
| Table                     | Name               | Position | Nullable | IsKey | IsAutoIncrement | TypeName  | Length | Precision | Scale | DatetimeLength |
+---------------------------+--------------------+----------+----------+-------+-----------------+-----------+--------+-----------+-------+----------------+
| KibanaSampleDataEcommerce | count              | 1        | false    | false | false           | int8      | -1     | 64        | 0     | NULL           |
| KibanaSampleDataEcommerce | maxPrice           | 2        | false    | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | sumPrice           | 3        | false    | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | minPrice           | 4        | false    | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | avgPrice           | 5        | false    | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | countDistinct      | 6        | false    | false | false           | int8      | -1     | 64        | 0     | NULL           |
| KibanaSampleDataEcommerce | id                 | 7        | true     | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | order_date         | 8        | true     | false | false           | timestamp | -1     | NULL      | NULL  | 10             |
| KibanaSampleDataEcommerce | last_mod           | 9        | true     | false | false           | timestamp | -1     | NULL      | NULL  | 10             |
| KibanaSampleDataEcommerce | customer_gender    | 10       | true     | false | false           | text      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | notes              | 11       | true     | false | false           | text      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | taxful_total_price | 12       | true     | false | false           | numeric   | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | has_subscription   | 13       | true     | false | false           | bool      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | is_male            | 14       | false    | false | false           | bool      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | is_female          | 15       | false    | false | false           | bool      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | __user             | 16       | true     | false | false           | text      | -1     | NULL      | NULL  | NULL           |
| KibanaSampleDataEcommerce | __cubeJoinField    | 17       | true     | false | false           | text      | -1     | NULL      | NULL  | NULL           |
+---------------------------+--------------------+----------+----------+-------+-----------------+-----------+--------+-----------+-------+----------------+
