rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__grafana_insubquery_where_tables.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(r#\"SELECT quote_ident(table_name) AS \"table\" FROM information_schema.tables WHERE quote_ident(table_schema) NOT IN ('information_schema', 'pg_catalog', '_timescaledb_cache', '_timescaledb_catalog', '_timescaledb_internal', '_timescaledb_config', 'timescaledb_information', 'timescaledb_experimental') AND table_type = 'BASE TABLE' AND quote_ident(table_schema) IN (SELECT CASE WHEN TRIM(s[i]) = '\"$user\"' THEN user ELSE TRIM(s[i]) END FROM generate_series(array_lower(string_to_array(current_setting('search_path'), ','), 1), array_upper(string_to_array(current_setting('search_path'), ','), 1)) AS i, string_to_array(current_setting('search_path'), ',') AS s)\"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------+
| table                       |
+-----------------------------+
| "KibanaSampleDataEcommerce" |
| "Logs"                      |
| "NumberCube"                |
| "WideCube"                  |
| "MultiTypeCube"             |
+-----------------------------+
