rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__grafana_pg_version_introspection.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"SELECT current_setting('server_version_num')::int/100 as version\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------+
| version |
+---------+
| 1400    |
+---------+
