rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__langchain_pg_get_indexdef_and_in_realiasing.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"\n                SELECT\n                    pg_catalog.pg_index.indrelid,\n                    cls_idx.relname AS relname_index,\n                    pg_catalog.pg_index.indisunique,\n                    pg_catalog.pg_constraint.conrelid IS NOT NULL AS has_constraint,\n                    pg_catalog.pg_index.indoption,\n                    cls_idx.reloptions,\n                    pg_catalog.pg_am.amname,\n                    CASE\n                        WHEN (pg_catalog.pg_index.indpred IS NOT NULL)\n                            THEN pg_catalog.pg_get_expr(pg_catalog.pg_index.indpred, pg_catalog.pg_index.indrelid)\n                    END AS filter_definition,\n                    pg_catalog.pg_index.indnkeyatts,\n                    idx_cols.elements,\n                    idx_cols.elements_is_expr\n                FROM pg_catalog.pg_index\n                JOIN pg_catalog.pg_class AS cls_idx ON pg_catalog.pg_index.indexrelid = cls_idx.oid\n                JOIN pg_catalog.pg_am ON cls_idx.relam = pg_catalog.pg_am.oid\n                LEFT OUTER JOIN (\n                    SELECT\n                        idx_attr.indexrelid AS indexrelid,\n                        min(idx_attr.indrelid) AS min_1,\n                        array_agg(idx_attr.element ORDER BY idx_attr.ord) AS elements,\n                        array_agg(idx_attr.is_expr ORDER BY idx_attr.ord) AS elements_is_expr\n                    FROM (\n                        SELECT\n                            idx.indexrelid AS indexrelid,\n                            idx.indrelid AS indrelid,\n                            idx.ord AS ord,\n                            CASE\n                                WHEN (idx.attnum = 0)\n                                    THEN pg_catalog.pg_get_indexdef(idx.indexrelid, idx.ord + 1, true)\n                                ELSE CAST(pg_catalog.pg_attribute.attname AS TEXT)\n                            END AS element,\n                            idx.attnum = 0 AS is_expr\n                        FROM (\n                            SELECT\n                                pg_catalog.pg_index.indexrelid AS indexrelid,\n                                pg_catalog.pg_index.indrelid AS indrelid,\n                                unnest(pg_catalog.pg_index.indkey) AS attnum,\n                                generate_subscripts(pg_catalog.pg_index.indkey, 1) AS ord\n                            FROM pg_catalog.pg_index\n                            WHERE\n                                NOT pg_catalog.pg_index.indisprimary\n                                AND pg_catalog.pg_index.indrelid IN (18000)\n                        ) AS idx\n                        LEFT OUTER JOIN pg_catalog.pg_attribute ON\n                            pg_catalog.pg_attribute.attnum = idx.attnum\n                            AND pg_catalog.pg_attribute.attrelid = idx.indrelid\n                        WHERE idx.indrelid IN (18000)\n                    ) AS idx_attr\n                    GROUP BY idx_attr.indexrelid\n                ) AS idx_cols ON pg_catalog.pg_index.indexrelid = idx_cols.indexrelid\n                LEFT OUTER JOIN pg_catalog.pg_constraint ON\n                    pg_catalog.pg_index.indrelid = pg_catalog.pg_constraint.conrelid\n                    AND pg_catalog.pg_index.indexrelid = pg_catalog.pg_constraint.conindid\n                    AND pg_catalog.pg_constraint.contype = ANY (ARRAY['p', 'u', 'x'])\n                WHERE\n                    pg_catalog.pg_index.indrelid IN (18000)\n                    AND NOT pg_catalog.pg_index.indisprimary\n                ORDER BY\n                    pg_catalog.pg_index.indrelid,\n                    cls_idx.relname\n                ;\".to_string(),\nDatabaseProtocol::PostgreSQL,).await?"
---
+----------+---------------+-------------+----------------+-----------+------------+--------+-------------------+-------------+----------+------------------+
| indrelid | relname_index | indisunique | has_constraint | indoption | reloptions | amname | filter_definition | indnkeyatts | elements | elements_is_expr |
+----------+---------------+-------------+----------------+-----------+------------+--------+-------------------+-------------+----------+------------------+
+----------+---------------+-------------+----------------+-----------+------------+--------+-------------------+-------------+----------+------------------+
