rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__metabase-2.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"SELECT \\\n                TABLE_SCHEMA TABLE_CAT, NULL TABLE_SCHEM, TABLE_NAME, COLUMN_NAME, \\\n                CASE data_type WHEN 'bit' THEN -7 WHEN 'tinyblob' THEN -3 WHEN 'mediumblob' THEN -4 WHEN 'longblob' THEN -4 WHEN 'blob' THEN -4 WHEN 'tinytext' THEN 12 WHEN 'mediumtext' THEN -1 WHEN 'longtext' THEN -1 WHEN 'text' THEN -1 WHEN 'date' THEN 91 WHEN 'datetime' THEN 93 WHEN 'decimal' THEN 3 WHEN 'double' THEN 8 WHEN 'enum' THEN 12 WHEN 'float' THEN 7 WHEN 'int' THEN IF( COLUMN_TYPE like '%unsigned%', 4,4) WHEN 'bigint' THEN -5 WHEN 'mediumint' THEN 4 WHEN 'null' THEN 0 WHEN 'set' THEN 12 WHEN 'smallint' THEN IF( COLUMN_TYPE like '%unsigned%', 5,5) WHEN 'varchar' THEN 12 WHEN 'varbinary' THEN -3 WHEN 'char' THEN 1 WHEN 'binary' THEN -2 WHEN 'time' THEN 92 WHEN 'timestamp' THEN 93 WHEN 'tinyint' THEN IF(COLUMN_TYPE like 'tinyint(1)%',-7,-6)  WHEN 'year' THEN 91 ELSE 1111 END  DATA_TYPE, IF(COLUMN_TYPE like 'tinyint(1)%', 'BIT',  UCASE(IF( COLUMN_TYPE LIKE '%(%)%', CONCAT(SUBSTRING( COLUMN_TYPE,1, LOCATE('(',COLUMN_TYPE) - 1 ), SUBSTRING(COLUMN_TYPE ,1+locate(')', COLUMN_TYPE))), COLUMN_TYPE))) TYPE_NAME,  CASE DATA_TYPE  WHEN 'time' THEN IF(DATETIME_PRECISION = 0, 10, CAST(11 + DATETIME_PRECISION as signed integer))  WHEN 'date' THEN 10  WHEN 'datetime' THEN IF(DATETIME_PRECISION = 0, 19, CAST(20 + DATETIME_PRECISION as signed integer))  WHEN 'timestamp' THEN IF(DATETIME_PRECISION = 0, 19, CAST(20 + DATETIME_PRECISION as signed integer))  ELSE   IF(NUMERIC_PRECISION IS NULL, LEAST(CHARACTER_MAXIMUM_LENGTH,2147483647), NUMERIC_PRECISION)  END COLUMN_SIZE, \\\n                65535 BUFFER_LENGTH, \\\n                CONVERT (CASE DATA_TYPE WHEN 'year' THEN NUMERIC_SCALE WHEN 'tinyint' THEN 0 ELSE NUMERIC_SCALE END, UNSIGNED INTEGER) DECIMAL_DIGITS, 10 NUM_PREC_RADIX, \\\n                IF(IS_NULLABLE = 'yes',1,0) NULLABLE,\n                COLUMN_COMMENT REMARKS, \\\n                COLUMN_DEFAULT COLUMN_DEF, \\\n                0 SQL_DATA_TYPE, \\\n                0 SQL_DATETIME_SUB, \\\n                LEAST(CHARACTER_OCTET_LENGTH,2147483647) CHAR_OCTET_LENGTH, \\\n                ORDINAL_POSITION, \\\n                IS_NULLABLE, \\\n                NULL SCOPE_CATALOG, \\\n                NULL SCOPE_SCHEMA, \\\n                NULL SCOPE_TABLE, \\\n                NULL SOURCE_DATA_TYPE, \\\n                IF(EXTRA = 'auto_increment','YES','NO') IS_AUTOINCREMENT, \\\n                IF(EXTRA in ('VIRTUAL', 'PERSISTENT', 'VIRTUAL GENERATED', 'STORED GENERATED') ,'YES','NO') IS_GENERATEDCOLUMN \\\n                FROM INFORMATION_SCHEMA.COLUMNS  WHERE (ISNULL(database()) OR (TABLE_SCHEMA = database())) AND TABLE_NAME = 'KibanaSampleDataEcommerce' \\\n                ORDER BY TABLE_CAT, TABLE_SCHEM, TABLE_NAME, ORDINAL_POSITION;\".to_string(),\nDatabaseProtocol::MySQL).await?"
---
+-----------+-------------+---------------------------+--------------------+-----------+-----------+-------------+---------------+----------------+----------------+----------+---------+------------+---------------+------------------+-------------------+------------------+-------------+---------------+--------------+-------------+------------------+------------------+--------------------+
| TABLE_CAT | TABLE_SCHEM | TABLE_NAME                | COLUMN_NAME        | DATA_TYPE | TYPE_NAME | COLUMN_SIZE | BUFFER_LENGTH | DECIMAL_DIGITS | NUM_PREC_RADIX | NULLABLE | REMARKS | COLUMN_DEF | SQL_DATA_TYPE | SQL_DATETIME_SUB | CHAR_OCTET_LENGTH | ORDINAL_POSITION | IS_NULLABLE | SCOPE_CATALOG | SCOPE_SCHEMA | SCOPE_TABLE | SOURCE_DATA_TYPE | IS_AUTOINCREMENT | IS_GENERATEDCOLUMN |
+-----------+-------------+---------------------------+--------------------+-----------+-----------+-------------+---------------+----------------+----------------+----------+---------+------------+---------------+------------------+-------------------+------------------+-------------+---------------+--------------+-------------+------------------+------------------+--------------------+
| db        | NULL        | KibanaSampleDataEcommerce | count              | 4         | INT       | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | maxPrice           | 1111      | NUMERIC   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | sumPrice           | 1111      | NUMERIC   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | minPrice           | 1111      | NUMERIC   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | avgPrice           | 1111      | NUMERIC   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | countDistinct      | 4         | INT       | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | order_date         | 93        | DATETIME  | NULL        | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | last_mod           | 93        | DATETIME  | NULL        | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | customer_gender    | 12        | VARCHAR   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | notes              | 12        | VARCHAR   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | taxful_total_price | 1111      | NUMERIC   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | has_subscription   | 1111      | BIT       | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | is_male            | 1111      | BIT       | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | is_female          | 1111      | BIT       | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | NO          | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | __user             | 12        | VARCHAR   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
| db        | NULL        | KibanaSampleDataEcommerce | __cubeJoinField    | 12        | VARCHAR   | 2147483647  | 65535         | 0              | 10             | 0        |         |            | 0             | 0                | 2147483647        | 0                | YES         | NULL          | NULL         | NULL        | NULL             | NO               | NO                 |
+-----------+-------------+---------------------------+--------------------+-----------+-----------+-------------+---------------+----------------+----------------+----------+---------+------------+---------------+------------------+-------------------+------------------+-------------+---------------+--------------+-------------+------------------+------------------+--------------------+
