rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__metabase_pktable_cat_query.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"\n                SELECT  NULL::text  AS pktable_cat,\n                        pkn.nspname AS pktable_schem,\n                        pkc.relname AS pktable_name,\n                        pka.attname AS pkcolumn_name,\n                        NULL::text  AS fktable_cat,\n                        fkn.nspname AS fktable_schem,\n                        fkc.relname AS fktable_name,\n                        fka.attname AS fkcolumn_name,\n                        pos.n       AS key_seq,\n                        CASE con.confupdtype\n                            WHEN 'c' THEN 0\n                            WHEN 'n' THEN 2\n                            WHEN 'd' THEN 4\n                            WHEN 'r' THEN 1\n                            WHEN 'p' THEN 1\n                            WHEN 'a' THEN 3\n                            ELSE NULL\n                        END AS update_rule,\n                        CASE con.confdeltype\n                            WHEN 'c' THEN 0\n                            WHEN 'n' THEN 2\n                            WHEN 'd' THEN 4\n                            WHEN 'r' THEN 1\n                            WHEN 'p' THEN 1\n                            WHEN 'a' THEN 3\n                            ELSE NULL\n                        END AS delete_rule,\n                        con.conname  AS fk_name,\n                        pkic.relname AS pk_name,\n                        CASE\n                            WHEN con.condeferrable AND con.condeferred THEN 5\n                            WHEN con.condeferrable THEN 6\n                            ELSE 7\n                        END AS deferrability\n                    FROM    pg_catalog.pg_namespace pkn,\n                            pg_catalog.pg_class pkc,\n                            pg_catalog.pg_attribute pka,\n                            pg_catalog.pg_namespace fkn,\n                            pg_catalog.pg_class fkc,\n                            pg_catalog.pg_attribute fka,\n                            pg_catalog.pg_constraint con,\n                            pg_catalog.generate_series(1, 32) pos(n),\n                            pg_catalog.pg_class pkic\n                WHERE   pkn.oid = pkc.relnamespace\n                AND     pkc.oid = pka.attrelid\n                AND     pka.attnum = con.confkey[pos.n]\n                AND     con.confrelid = pkc.oid\n                AND     fkn.oid = fkc.relnamespace\n                AND     fkc.oid = fka.attrelid\n                AND     fka.attnum = con.conkey[pos.n]\n                AND     con.conrelid = fkc.oid\n                AND     con.contype = 'f'\n                AND     (pkic.relkind = 'i' OR pkic.relkind = 'I')\n                AND     pkic.oid = con.conindid\n                AND     fkn.nspname = 'public'\n                AND     fkc.relname = 'actor'\n                ORDER BY pkn.nspname, pkc.relname, con.conname, pos.n;\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-------------+---------------+--------------+---------------+-------------+---------------+--------------+---------------+---------+-------------+-------------+---------+---------+---------------+
| pktable_cat | pktable_schem | pktable_name | pkcolumn_name | fktable_cat | fktable_schem | fktable_name | fkcolumn_name | key_seq | update_rule | delete_rule | fk_name | pk_name | deferrability |
+-------------+---------------+--------------+---------------+-------------+---------------+--------------+---------------+---------+-------------+-------------+---------+---------+---------------+
+-------------+---------------+--------------+---------------+-------------+---------------+--------------+---------------+---------+-------------+-------------+---------+---------+---------------+
