rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_introspection__metabase_table_cat_query.snap
---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"\n                SELECT  result.table_cat,\n                        result.table_schem,\n                        result.table_name,\n                        result.column_name,\n                        result.key_seq,\n                        result.pk_name\n                    FROM (\n                        SELECT  NULL AS table_cat,\n                                n.nspname AS table_schem,\n                                ct.relname AS table_name,\n                                a.attname AS column_name,\n                                (information_schema._pg_expandarray(i.indkey)).n as key_seq,\n                                ci.relname AS pk_name,\n                                information_schema._pg_expandarray(i.indkey) AS keys,\n                                a.attnum AS a_attnum\n                            FROM   pg_catalog.pg_class ct\n                            JOIN   pg_catalog.pg_attribute a ON(ct.oid = a.attrelid)\n                            JOIN   pg_catalog.pg_namespace n ON (ct.relnamespace = n.oid)\n                            JOIN   pg_catalog.pg_index i ON (a.attrelid = i.indrelid)\n                            JOIN   pg_catalog.pg_class ci ON (ci.oid = i.indexrelid)\n                        WHERE true AND ct.relname = 'actor' AND i.indisprimary) result\n                WHERE result.a_attnum = (result.keys).x\n                ORDER BY result.table_name, result.pk_name, result.key_seq;\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----------+-------------+------------+-------------+---------+---------+
| table_cat | table_schem | table_name | column_name | key_seq | pk_name |
+-----------+-------------+------------+-------------+---------+---------+
+-----------+-------------+------------+-------------+---------+---------+
